fixed whitespace issue

--- a/client/src/components/PennWrappedAbout.css
+++ b/client/src/components/PennWrappedAbout.css
@@ -60,9 +60,13 @@
   padding: 20px;
 }
 
+.penn-wrapped-content {
+  transform: translateY(8vh);
+}
+
 .penn-wrapped-mobile-msg h2 {
-    font-weight: 400;
-    font-size: 1.4rem;
+  font-weight: 400;
+  font-size: 1.4rem;
 }
 
 @media (max-width: 700px) {
